# slsv-master

./: .gitignore  .gitmodules  IITM-Licence.txt  ReadMe.md  SpikeVSpike.py  TODO.txt  Test.py  log.tx
docs/: Doxyfile.in
slsv_cnc/: CMakeLists.txt  Doxyfile  ReadMe.md  setup.py
slsv_cnc/python/: DevicePYTHON_wrap.cxx  InterfacePYTHON_wrap.cxx  StatePYTHON_wrap.cxx  slsv_interface.py  slsv_state.py  slsv_target.py
slsv_cnc/slsv/: __init__.py
slsv_cnc/src/: BasicDeviceTests.cpp  CMakeLists.txt  Commons.hpp  Device.i  DeviceInstance.cpp  DeviceInstance.hpp  DevicePYTHON_wrap.cxx  LockStepVerification.cpp  TestInstance.cpp  TestInstance.hpp  Tests.cpp  events.hpp  slsv.py  slsv_framework.i  slsv_frameworkPYTHON_wrap.h  slsv_target.py  traceCache.cpp
slsv_cnc/src/Coverage/: CMakeLists.txt  Coverage.cpp  Coverage.hpp  Coverage.i  CoveragePYTHON_wrap.h  EditDistance.cpp  SV_Assertions.cpp  TestInstance.cpp  ToggleCoverage.cpp  mit-plv-formal.cpp  mit-plv-verilog-interface.cpp
slsv_cnc/src/EventHandlers/: eventHandler.i
slsv_cnc/src/Interface/: CMakeLists.txt  Interface.cpp  Interface.hpp  Interface.i  InterfacePYTHON_wrap.cxx  V0.cpp  V0.hpp  slsv_interface.py  telnet-client.md  testInterface.py
slsv_cnc/src/Interface/DumpParser/: DumPraser.cpp  DumPraser.hpp
slsv_cnc/src/Interface/FPGA_PCIE/: FPGA_pcie.cpp
slsv_cnc/src/Interface/SpikeSlsvIntreface/: CMakeLists.txt  Interface.cpp  Interface.hpp  SpikeIf.cpp  SpikeIf.hpp  SpikeIf.i  Test.cpp
slsv_cnc/src/Interface/Telnet/: CMakeLists.txt  Telnet.cpp  Telnet.hpp  a.out  libtelnet.cpp  libtelnet.hpp
slsv_cnc/src/Interface/V0/: V0.cpp  V0.hpp
slsv_cnc/src/State/: CMakeLists.txt  ShaktiMicroArch.cpp  State.cpp  State.hpp  State.i  StatePYTHON_wrap.cxx  slsv_state.py  test.py
slsv_cnc/src/TraceCache/: TraceCache.hpp
slsv_cnc/tests-cpp/: CMakeLists.txt  Tests.cpp  testBasicSelfTest.cpp  testLockStepVerification.cpp  tests.hpp
test_vectors/: .cclass.cfg.swp  cclass.cfg  cfpga.cfg  slsvOptSpike.cfg  slsvOptSpike2.cfg  spike.cfg  tst.py
test_vectors/AAPG/: baseInstructions.py  config.py  make.py
test_vectors/AAPG/result/test1/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test10/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test2/: *  code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test3/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.riscv  output.s
test_vectors/AAPG/result/test4/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test5/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.riscv  output.s
test_vectors/AAPG/result/test6/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.riscv  output.s
test_vectors/AAPG/result/test7/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test8/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  objdump.txt  output.s
test_vectors/AAPG/result/test9/: code.mem  code.mem.LSB  code.mem.MSB  disaassembled.txt  output.s  (+1 more)
test_vectors/BareMetalBuild/: MakeFile.save  ReadMe.md  a.out  add.c  heavy  heavy.c  hello  link.ld  rot.c
test_vectors/SLSV_Validation_tests/: test.py  testDevice.py  testInterface.py  testState.py
test_vectors/SLSV_selfTests/: SLSV_test.py  testCoverage.py  testDevice.py  testInterface.py  testInterfaceV0.py  testState.py
test_vectors/Tests/: UnknownSeed0.rv64imafd  UnknownSeed1.rv64imafd  UnknownSeed3.rv64imafd  UnknownSeed6.rv64imafd  UnknownSeed7.rv64imafd  UnknownSeed8.rv64imafd  UnknownSeed9.rv64imafd
test_vectors/bootstrap/: boot  build.sh  lop.tx  lop.txt  output.dump  output.riscv  output.s  sync.c  sync.dump  sync.rv64g  sync.s
test_vectors/pkTests/: a.out  hello.c
test_vectors/rv64g-p-tests/: rv64mi-p-access  rv64mi-p-breakpoint  rv64mi-p-csr  rv64mi-p-illegal  rv64mi-p-ma_addr  rv64mi-p-ma_fetch  rv64mi-p-mcsr  rv64mi-p-sbreak  rv64mi-p-scall  rv64si-p-csr  rv64si-p-dirty  rv64si-p-ma_fetch  rv64si-p-sbreak  rv64si-p-scall  rv64si-p-wfi  rv64ua-p-amoadd_d  rv64ua-p-amoadd_w  rv64ua-p-amoand_d  rv64ua-p-amoand_w  rv64ua-p-amomax_d  rv64ua-p-amomax_w  rv64ua-p-amomaxu_d  rv64ua-p-amomaxu_w  rv64ua-p-amomin_d  rv64ua-p-amomin_w  rv64ua-p-amominu_d  rv64ua-p-amominu_w  rv64ua-p-amoor_d  rv64ua-p-amoor_w  rv64ua-p-amoswap_d  rv64ua-p-amoswap_w  rv64ua-p-amoxor_d  rv64ua-p-amoxor_w  rv64ua-p-lrsc  rv64uc-p-rvc  rv64ud-p-fadd  rv64ud-p-fclass  rv64ud-p-fcmp  rv64ud-p-fcvt  rv64ud-p-fcvt_w  (+83 more)
test_vectors/rv64g-p-tests (copy)/: rv64mi-p-breakpoint  rv64mi-p-illegal  rv64mi-p-ma_fetch  rv64mi-p-mcsr  rv64mi-p-sbreak  rv64ua-p-amoadd_d  rv64ua-p-amoand_w  rv64ua-p-amomax_w  rv64ua-p-amomaxu_w  rv64ua-p-amomin_d  rv64ua-p-amoxor_d  rv64ua-p-amoxor_w  rv64ud-p-fadd  rv64ud-p-fcvt_w  rv64ud-p-fmadd  rv64ud-p-ldst  rv64ud-p-recoding  rv64uf-p-fadd  rv64uf-p-fclass  rv64uf-p-fdiv  rv64uf-p-ldst  rv64ui-p-addi  rv64ui-p-addiw  rv64ui-p-and  rv64ui-p-auipc  rv64ui-p-bge  rv64ui-p-blt  rv64ui-p-ld  rv64ui-p-lh  rv64ui-p-sb  rv64ui-p-sd  rv64ui-p-sh  rv64ui-p-sll  rv64ui-p-sllw  rv64ui-p-sltu  rv64ui-p-sra  rv64ui-p-srl  rv64ui-p-sw  rv64ui-p-xor  rv64um-p-div  (+8 more)
test_vectors/rv64g-v-tests/: rv64ua-v-amoadd_d  rv64ua-v-amoadd_w  rv64ua-v-amoand_d  rv64ua-v-amoand_w  rv64ua-v-amomax_d  rv64ua-v-amomax_w  rv64ua-v-amomaxu_d  rv64ua-v-amomaxu_w  rv64ua-v-amomin_d  rv64ua-v-amomin_w  rv64ua-v-amominu_d  rv64ua-v-amominu_w  rv64ua-v-amoor_d  rv64ua-v-amoor_w  rv64ua-v-amoswap_d  rv64ua-v-amoswap_w  rv64ua-v-amoxor_d  rv64ua-v-amoxor_w  rv64ua-v-lrsc  rv64uc-v-rvc  rv64ud-v-fadd  rv64ud-v-fclass  rv64ud-v-fcmp  rv64ud-v-fcvt  rv64ud-v-fdiv  rv64ud-v-fmadd  rv64ud-v-fmin  rv64ud-v-ldst  rv64ud-v-move  rv64ud-v-recoding  rv64ud-v-structural  rv64uf-v-fadd  rv64uf-v-fclass  rv64uf-v-fcmp  rv64uf-v-fcvt  rv64uf-v-fcvt_w  rv64uf-v-fdiv  rv64uf-v-fmadd  rv64uf-v-fmin  rv64uf-v-ldst  (+65 more)
