SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/python)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FIND_PACKAGE(SWIG REQUIRED)
include(UseSWIG)
INCLUDE_DIRECTORIES(/usr/include/python3.6)
#INCLUDE_DIRECTORIES(.src)
FIND_PACKAGE(PythonLibs)
SET(CMAKE_SWIG_FLAGS "-DSWIGWORDSIZE64")
SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)
SET(SWIG_OUTFILE_DIR "./" )

SET_SOURCE_FILES_PROPERTIES(./Device.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(./Device.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(slsv_target LANGUAGE python SOURCES ./Device.i ./DeviceInstance.cpp)
#SWIG_ADD_MODULE(slsv_target python ./Device.i ./DeviceInstance.cpp)
SWIG_LINK_LIBRARIES(slsv_target ${PYTHON_LIBRARIES} Interface State Telnet)

add_library (Device SHARED DeviceInstance.cpp)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
target_include_directories (Device PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
