SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/slsv)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FIND_PACKAGE(SWIG REQUIRED)
include(UseSWIG)
INCLUDE_DIRECTORIES(/usr/include/python3.6)
#INCLUDE_DIRECTORIES(.src)
FIND_PACKAGE(PythonLibs)
SET(CMAKE_SWIG_FLAGS "-DSWIGWORDSIZE64")
SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/slsv)
SET(SWIG_OUTFILE_DIR "./" )

SET_SOURCE_FILES_PROPERTIES(slsv_framework.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(slsv_framework.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(slsv_framework LANGUAGE python SOURCES slsv_framework.i DeviceInstance.cpp BasicDeviceTests.cpp LockStepVerification.cpp)
#SWIG_ADD_MODULE(slsv_target python ./Device.i ./DeviceInstance.cpp)
SWIG_LINK_LIBRARIES(slsv_framework ${PYTHON_LIBRARIES} Interface State Telnet Coverage)

add_library (slsv_framework SHARED DeviceInstance.cpp BasicDeviceTests.cpp LockStepVerification.cpp)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -std=gnu++0x")
target_include_directories (slsv_framework PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
