SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/slsv)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

SET(BUILD_SWIG FALSE)

FIND_PACKAGE(SWIG REQUIRED)

#if (${BUILD_SWIG} EQUAL TRUE )

include(UseSWIG)
INCLUDE_DIRECTORIES(/usr/include/python3.6)
INCLUDE_DIRECTORIES(.src/Coverage)
FIND_PACKAGE(PythonLibs)
SET(CMAKE_SWIG_FLAGS "-DSWIGWORDSIZE64")

SET(SWIG_OUTFILE_DIR "./")
SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/slsv)

SET_SOURCE_FILES_PROPERTIES(Coverage.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(Coverage.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(slsv_coverage LANGUAGE python SOURCES Coverage.i Coverage.cpp EditDistance.cpp SV_Assertions.cpp ToggleCoverage.cpp)
SWIG_LINK_LIBRARIES(slsv_coverage slsv_framework State ${PYTHON_LIBRARIES})
#endif(${BUILD_SWIG} EQUAL TRUE )


add_library (Coverage SHARED Coverage.cpp EditDistance.cpp SV_Assertions.cpp ToggleCoverage.cpp)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
target_include_directories (Coverage PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})