SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/python)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

FIND_PACKAGE(SWIG REQUIRED)
include(UseSWIG)
INCLUDE_DIRECTORIES(/usr/include/python3.6)
INCLUDE_DIRECTORIES(.src/State)
FIND_PACKAGE(PythonLibs)
SET(CMAKE_SWIG_FLAGS "-DSWIGWORDSIZE64")
SET(SWIG_OUTFILE_DIR "./")
SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/python)

SET_SOURCE_FILES_PROPERTIES(./State.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(./State.i PROPERTIES SWIG_FLAGS "-includeall")
#SWIG_ADD_LIBRARY(slsv_state LANGUAGE python SOURCES ./State.i ./State.cpp)
SWIG_ADD_MODULE(slsv_state python ./State.i ./State.cpp)
SWIG_LINK_LIBRARIES(slsv_state ${PYTHON_LIBRARIES})

#execute_process(COMMAND python3 -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
#install(TARGETS _slsv_state DESTINATION ${PYTHON_SITE_PACKAGES})
#install(FILES ${CMAKE_BINARY_DIR}/src/target.py DESTINATION ${PYTHON_SITE_PACKAGES})


add_library (State SHARED State.cpp)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
target_include_directories (State PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
